# PoPMobile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  KASDECK_PORT_REFERENCE.md  KASDeck.ino  LICENSE  README.md  SECURITY.md  keystore.properties.example  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  keccak.c  keccak.h  kheavyhash.c  kheavyhash.h  mining_engine.c  mining_engine.h
app/src/main/java/com/proofofprints/kasminer/: KASMinerApp.kt  LogManager.kt
app/src/main/java/com/proofofprints/kasminer/mining/: MiningEngine.kt
app/src/main/java/com/proofofprints/kasminer/popmanager/: PoPManagerReporter.kt
app/src/main/java/com/proofofprints/kasminer/service/: MiningService.kt  ThermalMonitor.kt
app/src/main/java/com/proofofprints/kasminer/stratum/: StratumClient.kt
app/src/main/java/com/proofofprints/popmobile/: KASMinerApp.kt  LogManager.kt
app/src/main/res/drawable/: ic_popminer_logo.xml
app/src/main/res/layout/: activity_qr_scanner.xml
app/src/main/res/mipmap-anydpi-v26/: poplauncher_round.xml
app/src/main/res/values/: poplauncher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: RELEASING.md
docs/screenshots/: README.txt
thoughts/shared/handoffs/general/: 2026-04-09_12-27-00_kasmobileminer-invalid-difficulty-debug.md  2026-04-09_17-15-00_extranonce-root-cause-found.md  2026-04-17_15-30-00_popmobile-polish-and-open-source-prep.md
(+20 files in other folders)
